--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     <footer class="footer">
       <p class="copy">
         Project original by: <br>
-        &copy; Copyright. J.A. Hernández, 2022
+        &copy; Copyright. Siri R Pissay, 2024
       </p>
       <h3><a class="github" href="https://github.com/jesusalberto18/odin-recipes">
         Check this project on GitHub</a></h3>
-      <p class="bbc"><em>*All recipes taken from <a class="bbc-gf" href="https://www.bbcgoodfood.com">bbcgoodfood.com*</a></em></p>
+      <p class="bbc"><em>*All recipes taken from <a class="bbc-gf" href="https://www.bbcgoodfood.com">goodfood.com*</a></em></p>
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
