--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wonderful Tasty Recipes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
@@ -81,9 +81,9 @@
         Project original by: <br>
         &copy; Copyright. Siri R Pissay, 2024
       </p>
-      <h3><a class="github" href="https://github.com/jesusalberto18/odin-recipes">
+      <h3><a class="github" href="https://github.com/Siri-R-Pissay/Listing-Recipes">
         Check this project on GitHub</a></h3>
-      <p class="bbc"><em>*All recipes taken from <a class="bbc-gf" href="https://www.bbcgoodfood.com">goodfood.com*</a></em></p>
+      <p class="bbc"><em>*All recipes taken from <a class="bbc-gf" href="https://www.goodfood.com">bbcgoodfood.com*</a></em></p>
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
