--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         Project original by: <br>
         &copy; Copyright. Siri R Pissay, 2024
       </p>
-      <h3><a class="github" href="https://github.com/Siri-R-Pissay/Listing-Recipes">
+      <h3><a class="github" href="https:/github.com/Siri-R-Pissay/Listing-Recipes">
         Check this project on GitHub</a></h3>
       <p class="bbc"><em>*All recipes taken from <a class="bbc-gf" href="https://www.goodfood.com">bbcgoodfood.com*</a></em></p>
     </footer>
