--- a/recipe_dinner/caesar_salad.html
+++ b/recipe_dinner/caesar_salad.html
@@ -55,7 +55,7 @@
     <footer class="footer">
       <p class="copy">
         Project original by: <br>
-        Copyright &copy; J.A. Hernández, 2022
+        Copyright &copy; Siri R Pissay, 2024
       </p>
     </footer>
   </body>
