--- a/recipe_dinner/meatball_tomato.html
+++ b/recipe_dinner/meatball_tomato.html
@@ -46,14 +46,14 @@
           Season to taste, then add the meatballs and spinach. Simmer for 5-7 mins or until cooked through. Ladle into bowls and top with the basil and some parmesan, if you like. <br>        </p>
       </div>
       <button class="btn-back" type="button" name="button">
-        <a class="back" href="../index.html">Back</a>
+        <a class="back" href="index.html">Back</a>
       </button>
     </div>
 
     <footer class="footer">
       <p class="copy">
         Project original by: <br>
-        Copyright &copy; J.A. Hernández, 2022
+        Copyright &copy; Siri R Pissay, 2024
       </p>
     </footer>
   </body>
