--- a/recipe_dinner/gnocchi_fish_pie.html
+++ b/recipe_dinner/gnocchi_fish_pie.html
@@ -49,7 +49,7 @@
       </div>
 
       <button class="btn-back" type="button" name="button">
-        <a class="back" href="../index.html">Back</a>
+        <a class="back" href="index.html">Back</a>
       </button>
     </div>
 
