--- a/recipe_dinner/pasta_salmon_peas.html
+++ b/recipe_dinner/pasta_salmon_peas.html
@@ -47,14 +47,14 @@
         </p>
       </div>
       <button class="btn-back" type="button" name="button">
-        <a class="back" href="../index.html">Back</a>
+        <a class="back" href="index.html">Back</a>
       </button>
     </div>
 
     <footer class="footer">
       <p class="copy">
         Project original by: <br>
-        Copyright &copy; J.A. Hernández, 2022
+        Copyright &copy; Siri R Pissay, 2024
       </p>
     </footer>
   </body>
