--- a/recipe_breakfast/chocolate_porridge.html
+++ b/recipe_breakfast/chocolate_porridge.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recipes | Chocolate Porridge</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
 
@@ -19,7 +19,7 @@
 
     <div class="main">
       <button class="btn-back" type="button" name="button">
-        <a class="back" href="../index.html">Back</a>
+        <a class="back" href="index.html">Back</a>
       </button>
       <h1>Chocolate Porridge</h1>
       <div class="recipe">
@@ -40,7 +40,7 @@
         </p>
       </div>
       <button class="btn-back" type="button" name="button">
-        <a class="back" href="../index.html">Back</a>
+        <a class="back" href="index.html">Back</a>
       </button>
     </div>
 
