--- a/index.html
+++ b/index.html
@@ -26,53 +26,53 @@
     <ul class="list">
       <h3>Breakfast</h3>
         <li class="breakfast">
-          <a href="recipes_breakfast/oat_milkshake.html"><em>Fruit & Oat Milkshake</em></a>
+          <a href="https://www.wellplated.com/oatmeal-smoothie-recipe/"><em>Fruit & Oat Milkshake</em></a>
         </li>
         <li class="breakfast">
-          <a href="recipes_breakfast/american_pancakes.html"><em>American Pancakes</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/american-pancakes"><em>American Pancakes</em></a>
         </li>
         <li class="breakfast">
-          <a href="recipes_breakfast/healthy_cookies.html"><em>Healthy Cookies</em></a>
+          <a href="https://www.wellplated.com/healthy-oatmeal-cookies/"><em>Healthy Cookies</em></a>
         </li>
         <li class="breakfast">
-          <a href="recipes_breakfast/carrot_cake_porridge.html"><em>Carrot Cake Porridge</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/carrot-cake-porridge"><em>Carrot Cake Porridge</em></a>
         </li>
         <li class="breakfast">
-          <a href="recipes_breakfast/chocolate_porridge.html"><em>Chocolate Porridge</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/chocolate-porridge"><em>Chocolate Porridge</em></a>
         </li>
 
       <h3>Lunch</h3>
         <li class="lunch">
-          <a href="recipes_lunch/lassagna.html"><em>Lassagna</em></a>
+          <a href="https://www.recipetineats.com/lasagna/"><em>Lassagna</em></a>
         </li>
         <li class="lunch">
-          <a href="recipes_lunch/tomato_penne.html"><em>Tomato Penne with Avocado</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/mexican-penne-avocado"><em>Tomato Penne with Avocado</em></a>
         </li>
         <li class="lunch">
-          <a href="recipes_lunch/chicken_hummus.html"><em>Chicken Hummus Bowl</em></a>
+          <a href="https://www.eatingwell.com/recipe/281045/chicken-hummus-bowls/"><em>Chicken Hummus Bowl</em></a>
         </li>
         <li class="lunch">
-          <a href="recipes_lunch/spinach_falafel.html"><em>Spinach Falafel and Hummus Bowl</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/spinach-falafel-hummus-bowl"><em>Spinach Falafel and Hummus Bowl</em></a>
         </li>
         <li class="lunch">
-          <a href="recipes_lunch/broccoli_pea_soup.html"><em>Herby Broccoli & Pea Soup</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/herby-broccoli-pea-soup"><em>Herby Broccoli & Pea Soup</em></a>
         </li>
 
       <h3>Dinner</h3>
         <li class="dinner">
-          <a href="recipes_dinner/caesar_salad.html"><em>Caesar Salad</em></a>
+          <a href="https://natashaskitchen.com/caesar-salad-recipe/"><em>Caesar Salad</em></a>
         </li>
         <li class="dinner">
-          <a href="recipes_dinner/meatball_tomato.html"><em>Meatball & Tomato Soup</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/meatball-tomato-soup"><em>Meatball & Tomato Soup</em></a>
         </li>
         <li class="dinner">
-          <a href="recipes_dinner/pasta_salmon_peas.html"><em>Pasta with Salmon and Peas</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/pasta-salmon-peas"><em>Pasta with Salmon and Peas</em></a>
         </li>
         <li class="dinner">
-          <a href="recipes_dinner/gnocchi_fish_pie.html"><em>Gnocchi Fish Pie</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/gnocchi-fish-pie"><em>Gnocchi Fish Pie</em></a>
         </li>
         <li class="dinner">
-          <a href="recipes_dinner/veggie_yaki_udon.html"><em>Veggie Yaki Udon</em></a>
+          <a href="https://www.bbcgoodfood.com/recipes/veggie-yaki-udon"><em>Veggie Yaki Udon</em></a>
         </li>
     </ul>
 
